Se corrige funcion en las Card, se agrega una alerta en el tootips y se adjunta el Formulario

--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -82,6 +82,12 @@ h2 {
     padding: 0px 0px 0px 0px;
 }
 
+.click {
+    text-align: center;
+    color: white;
+    font-family: 'Josefin Sans', sans-serif;
+}
+
 .formulario {
     padding: 30px 0px 0px 0px;
 
